--- a/theme/css/grid.css
+++ b/theme/css/grid.css
@@ -24,7 +24,7 @@ html {
 
 body {
   background-color: #fff;
-  color: #555;
+  color: #242424;
 }
 
 .container {
@@ -190,7 +190,7 @@ ul {
    ========================================================================== */
 
 a {
-  color: #497bad;
+  color: #184CBB;
   text-decoration: none;
 }
 
