--- a/theme/css/freecad.css
+++ b/theme/css/freecad.css
@@ -1,144 +1,41 @@
 /* Fonts */
 
-/* Questrial
-Used as Heading font 
- */
-/* questrial-regular - latin */
-@font-face {
-  font-family: 'Questrial';
-  font-style: normal;
-  font-weight: 400;
-  src: url('/theme/fonts/questrial-v6-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local('Questrial'), local('Questrial-Regular'),
-       url('/theme/fonts/questrial-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/theme/fonts/questrial-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/theme/fonts/questrial-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('/theme/fonts/questrial-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('/theme/fonts/questrial-v6-latin-regular.svg#Questrial') format('svg'); /* Legacy iOS */
-}
-
-/* Open Sans
- * In use all over the place as body text
- */
-/* open-sans-300italic - latin */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: italic;
-  font-weight: 300;
-  src: url('/theme/fonts/open-sans-v13-latin-300italic.eot'); /* IE9 Compat Modes */
-  src: local('Open Sans Light Italic'), local('OpenSansLight-Italic'),
-       url('/theme/fonts/open-sans-v13-latin-300italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/theme/fonts/open-sans-v13-latin-300italic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/theme/fonts/open-sans-v13-latin-300italic.woff') format('woff'), /* Modern Browsers */
-       url('/theme/fonts/open-sans-v13-latin-300italic.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('/theme/fonts/open-sans-v13-latin-300italic.svg#OpenSans') format('svg'); /* Legacy iOS */
-}
-
-/* open-sans-300 - latin */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 300;
-  src: url('/theme/fonts/open-sans-v13-latin-300.eot'); /* IE9 Compat Modes */
-  src: local('Open Sans Light'), local('OpenSans-Light'),
-       url('/theme/fonts/open-sans-v13-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/theme/fonts/open-sans-v13-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/theme/fonts/open-sans-v13-latin-300.woff') format('woff'), /* Modern Browsers */
-       url('/theme/fonts/open-sans-v13-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('/theme/fonts/open-sans-v13-latin-300.svg#OpenSans') format('svg'); /* Legacy iOS */
-}
-
-/* open-sans-regular - latin */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: url('/theme/fonts/open-sans-v13-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local('Open Sans'), local('OpenSans'),
-       url('/theme/fonts/open-sans-v13-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/theme/fonts/open-sans-v13-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/theme/fonts/open-sans-v13-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('/theme/fonts/open-sans-v13-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('/theme/fonts/open-sans-v13-latin-regular.svg#OpenSans') format('svg'); /* Legacy iOS */
-}
-/* open-sans-italic - latin */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: italic;
-  font-weight: 400;
-  src: url('/theme/fonts/open-sans-v13-latin-italic.eot'); /* IE9 Compat Modes */
-  src: local('Open Sans Italic'), local('OpenSans-Italic'),
-       url('/theme/fonts/open-sans-v13-latin-italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/theme/fonts/open-sans-v13-latin-italic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/theme/fonts/open-sans-v13-latin-italic.woff') format('woff'), /* Modern Browsers */
-       url('/theme/fonts/open-sans-v13-latin-italic.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('/theme/fonts/open-sans-v13-latin-italic.svg#OpenSans') format('svg'); /* Legacy iOS */
-}
-/* open-sans-600 - latin */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 600;
-  font-weight: bold;
-  src: url('/theme/fonts/open-sans-v13-latin-600.eot'); /* IE9 Compat Modes */
-  src: local('Open Sans Bold'), local('OpenSans-Bold'),
-       url('/theme/fonts/open-sans-v13-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/theme/fonts/open-sans-v13-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/theme/fonts/open-sans-v13-latin-600.woff') format('woff'), /* Modern Browsers */
-       url('/theme/fonts/open-sans-v13-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('/theme/fonts/open-sans-v13-latin-600.svg#OpenSans') format('svg'); /* Legacy iOS */
-}
 /* open-sans-600italic - latin */
-@font-face {
+/*@font-face {
   font-family: 'Open Sans';
   font-style: italic;
   font-weight: 600;
-  font-weight: bold;
-  src: url('/theme/fonts/open-sans-v13-latin-600italic.eot'); /* IE9 Compat Modes */
-  src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'),
-       url('/theme/fonts/open-sans-v13-latin-600italic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('/theme/fonts/open-sans-v13-latin-600italic.woff2') format('woff2'), /* Super Modern Browsers */
-       url('/theme/fonts/open-sans-v13-latin-600italic.woff') format('woff'), /* Modern Browsers */
-       url('/theme/fonts/open-sans-v13-latin-600italic.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('/theme/fonts/open-sans-v13-latin-600italic.svg#OpenSans') format('svg'); /* Legacy iOS */
-}
-
-
-
-/* League Gothic Regular */
-/* Also only used on the main page
- * for the GIMP title at the moment */
-@font-face {
-    font-family: 'League Gothic';
-    src: url('/theme/fonts/leaguegothic-regular-webfont.eot');
-    src: url('/theme/fonts/leaguegothic-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/theme/fonts/leaguegothic-regular-webfont.woff') format('woff'),
-         url('/theme/fonts/leaguegothic-regular-webfont.ttf') format('truetype'),
-         url('/theme/fonts/leaguegothic-regular-webfont.svg#league_gothicregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-
-
-
-/* Ostrich Sans Rounded */
-/* Only used on the main page?
- * may have to move this to only the index.css */
-@font-face {
-	font-family: 'Ostrich Sans Rounded';
-	src: url('/theme/fonts/ostrich-sans-rounded.eot');
-	src: local('☺'), url('/theme/fonts/ostrich-sans-rounded.woff') format('woff'), url('/theme/fonts/ostrich-sans-rounded.ttf') format('truetype'), url('/theme/fonts/ostrich-sans-rounded.svg') format('svg');
-	font-weight: 300;
-	font-style: normal;
-}
-
+  font-weight: bold;*/
+/*  src: url('/theme/fonts/open-sans-v13-latin-600italic.eot');  IE9 Compat Modes */
+/*  src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), */
+/*        url('/theme/fonts/open-sans-v13-latin-600italic.eot?#iefix') format('embedded-opentype'), IE6-IE8 */
+/*       url('/theme/fonts/open-sans-v13-latin-600italic.woff2') format('woff2'), Super Modern Browsers */
+/*       url('/theme/fonts/open-sans-v13-latin-600italic.woff') format('woff'),  Modern Browsers */
+/*       url('/theme/fonts/open-sans-v13-latin-600italic.ttf') format('truetype'),  Safari, Android, iOS */
+/*       url('/theme/fonts/open-sans-v13-latin-600italic.svg#OpenSans') format('svg');  Legacy iOS */
+/*}/*
 
 /* Creative Commons Fonts */
 @font-face {
     font-family: 'CC';
-    src: url('/theme/fonts/cc-icons.ttf');
+    src: url('cc-icons-simple/cc-icons.ttf');
+    font-weight: 400;
+    font-style: normal;
+}
+
+/* FreeCAD original fonts */
+@font-face {
+    font-family: 'Fira Sans';
+    src: url('fonts/FiraSans-Regular.eot');
+    src: local('☺'), url('fonts/FiraSans-Regular.woff') format('woff'), url('fonts/FiraSans-Regular.ttf') format('truetype'), url('fonts/FiraSans-Regular.svg') format('svg');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('fonts/Roboto.eot');
+    src: local('☺'), url('fonts/Roboto.woff') format('woff'), url('fonts/Roboto.ttf') format('truetype'), url('fonts/Roboto.svg') format('svg');
     font-weight: 400;
     font-style: normal;
 }
@@ -149,13 +46,13 @@ Used as Heading font
 }
 
 html {
-    font-family: "Open Sans", sans;
+    font-family: "Fira Sans", sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: Lato, sans;
+    font-family: Fira Sans, sans-serif;
     font-weight: 400;
-    font-family: Questrial, sans;
+    font-family: Fira Sans, sans-serif;
 }
 
 h1 {
@@ -172,14 +69,14 @@ nav#menu {
     background-color: #0e2426;
     text-align: center;
     padding: 0.2rem 0;
-    font-family: Lato;
+    font-family: Roboto;
     text-transform: uppercase;
     font-size: 1rem;
     font-size: 0.85rem;
     padding: 0.2rem 0.5rem;
-    font-family: "Josefin Sans", Lato, "Open Sans", sans-serif;
+    /*font-family: "Josefin Sans", Lato, "Open Sans", sans-serif;*/
     /* per jimmac */
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 0.7rem;
     font-weight: 400;
     font-weight: 600;
@@ -212,7 +109,7 @@ figure {
     margin: 1rem 0;
 }
 
-#gimp-home img {
+#freecad-home img {
     width: initial; 
     margin: 0;
     display: inline;
@@ -327,11 +224,11 @@ footer .nav-bottom li {
 }
 
 footer .nav-bottom a {
-    font-family: Lato;
+    font-family: Roboto;
     text-transform: uppercase;
     color: whitesmoke;
-    font-family: "Josefin Sans", Lato, "Open Sans", sans-serif;
-    font-family: 'Open Sans', sans-serif;
+    /*font-family: "Josefin Sans", Lato, "Open Sans", sans-serif;*/
+    font-family: 'Fira Sans', sans-serif;
     font-weight: 300;
     letter-spacing: 0.05rem;
 }
@@ -392,7 +289,7 @@ footer .nav-bottom a {
         padding: 1rem 0;
     }
 
-    #nav-btm-gimp-home {
+    #nav-btm-freecad-home {
         margin-left: 0;
     }
 
