--- a/theme/css/grid.css
+++ b/theme/css/grid.css
@@ -57,7 +57,7 @@ header h1 {
   padding: .4rem .6rem;
   display: inline-block;
   font-size: 1.8rem;
-  text-transform: uppercase;
+  /*text-transform: uppercase; */
   margin-bottom: 2rem;
 }
 
