--- a/theme/css/freecad.css
+++ b/theme/css/freecad.css
@@ -66,11 +66,11 @@ p {
 }
 
 nav#menu {
-    background-color: #0e2426;
+    background-color: #222;
     text-align: center;
     padding: 0.2rem 0;
     font-family: Roboto;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     font-size: 1rem;
     font-size: 0.85rem;
     padding: 0.2rem 0.5rem;
@@ -209,7 +209,7 @@ ol > li > ol > li > ol {
 
 footer {
     padding: 3rem 0;
-    background-color: #0e2426;
+    background-color: #222;
     color: silver;
     box-shadow: inset 0 7px 15px -5px black;
 }
@@ -225,10 +225,10 @@ footer .nav-bottom li {
 
 footer .nav-bottom a {
     font-family: Roboto;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     color: whitesmoke;
     /*font-family: "Josefin Sans", Lato, "Open Sans", sans-serif;*/
-    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-weight: 300;
     letter-spacing: 0.05rem;
 }
@@ -249,7 +249,7 @@ footer .nav-bottom a {
 }
 
 .secondary-links ul a {
-    color: #f57900;
+    color: #184CBB;
 }
 
 .row.bottom {
@@ -260,7 +260,7 @@ footer .nav-bottom a {
 }
 
 .row.bottom a {
-    color: #f57900;
+    color: #184CBB;
 }
 
 @media ( max-width: 40rem ){
